--- a/springcloud-provider-dept-8001/src/main/resources/application.yml
+++ b/springcloud-provider-dept-8001/src/main/resources/application.yml
@@ -4,7 +4,9 @@ server:
 #mybatis配置
 mybatis:
   type-aliases-package: com.my.springcloud.pojo
-  mapper-locations: classpath:mybatis/mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
 
 #spring配置
 spring:
@@ -16,3 +18,4 @@ spring:
     url: jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+
