--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>springcloud-provider-dept-8001</module>
         <module>springcloud-consumer-dept-80</module>
         <module>springcloud-eureka-7001</module>
+        <module>springcloud-eureka-7002</module>
+        <module>springcloud-provider-dept-8002</module>
+        <module>springcloud-provider-dept-8003</module>
     </modules>
 
     <packaging>pom</packaging>
