--- a/springcloud-eureka-7002/src/main/resources/application.yml
+++ b/springcloud-eureka-7002/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 7001
+  port: 7002
 
 # eureka配置
 eureka:
   instance:
-    hostname: localhost
+    hostname: 127.0.0.1
   client:
     register-with-eureka: false # 是否向eureka注册中心注册自己
     fetch-registry: false # 为false表示自己为注册中心
     service-url:
-      defaultZone: http://127.0.0.1:7002/eureka/
+      defaultZone: http://localhost:7001/eureka/
