--- a/springcloud-provider-dept-8003/src/main/resources/application.yml
+++ b/springcloud-provider-dept-8003/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8001
+  port: 8003
 
 #mybatis配置
 mybatis:
@@ -15,7 +15,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/springcloud?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/cloud2?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
 eureka:
@@ -23,7 +23,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:7001/eureka/,http://127.0.0.1:7002/eureka/
   instance:
-    instance-id: springcloud-provider-dept-8001
+    instance-id: springcloud-provider-dept-8003
 #info配置
 info:
   app.name: 部门提供服务
