--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springcloud-eureka-7002</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
+        <module>springcloud-consumer-feign</module>
     </modules>
 
     <packaging>pom</packaging>
